--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,11 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :AWS_ACCESS_KEY_ID) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :AWS_SECRET_ACCESS_KEY) %>
-  # 以下２行は変える
-  region: <%= Rails.application.credentials.dig(:aws, :AWS_REGION) %> #東京
-  bucket: <%= Rails.application.credentials.dig(:aws, :S3_BUCKET) %> #自分で作成したS3のバケットの名前
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['AWS_DEFAULT_REGION'] %>
+  bucket: <%= ENV['S3_BUCKET'] %> #自分で作成したS3のバケットの名前
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
