--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :AWS_ACCESS_KEY_ID) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :AWS_SECRET_ACCESS_KEY) %>
-  region: <%= Rails.application.credentials.dig(:aws, :AWS_DEFAULT_REGION) %>
-  bucket: <%= Rails.application.credentials.dig(:aws, :S3_BUCKET) %>
+  region: <%= ENV['AWS_DEFAULT_REGION'] %>
+  bucket: <%= ENV['S3_BUCKET'] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
