--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,12 +9,13 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  # access_key_id: <%= Rails.application.credentials.dig(:aws, :AWS_ACCESS_KEY_ID) %>
-  # secret_access_key: <%= Rails.application.credentials.dig(:aws, :AWS_SECRET_ACCESS_KEY) %>
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['AWS_DEFAULT_REGION'] %>
+  region: 'ap-northeast-1'
   bucket: <%= ENV['S3_BUCKET'] %>
+
+  # access_key_id: <%= Rails.application.credentials.dig(:aws, :AWS_ACCESS_KEY_ID) %>
+  # secret_access_key: <%= Rails.application.credentials.dig(:aws, :AWS_SECRET_ACCESS_KEY) %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
