--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,4 @@ test:
 
 production:
   <<: *default
-  database: refbackend_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  url: <%= ENV['DATABASE_URL'] %>
