--- a/config/database.yml
+++ b/config/database.yml
@@ -21,14 +21,14 @@ test:
   database: db/test.sqlite3
 
 # postgresの場合
-# production:
-#   <<: *default
-#   url: <%= ENV['DATABASE_URL'] %>
-
-# MySQLの場合
 production:
   <<: *default
-  database: refbackend_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  url: <%= ENV['DATABASE_URL'] %>
+
+# MySQLの場合
+# production:
+#   <<: *default
+#   database: refbackend_production
+#   username: root
+#   password: <%= ENV['DATABASE_PASSWORD'] %>
+#   socket: /var/lib/mysql/mysql.sock
